[gd_scene load_steps=2 format=3 uid="uid://brgtjw7w5vr05"]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1_uimanager"]
[ext_resource type="PackedScene" uid="uid://c8ym3qkr1vh2k" path="res://Scenes/CooldownIcon.tscn" id="2_cooldown"]

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1_uimanager")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CooldownIcons" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -84.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 12

[node name="AttackIcon" parent="HUD/CooldownIcons" instance=ExtResource("2_cooldown")]
layout_mode = 2

[node name="SkillIcon" parent="HUD/CooldownIcons" instance=ExtResource("2_cooldown")]
layout_mode = 2

[node name="PermanentPowerups" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -152.0
offset_right = -20.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 8
alignment = 2

